--- a/data/config.yaml
+++ b/data/config.yaml
@@ -21,6 +21,8 @@ description:
 page_title:
   "🪴 Daily gardening"
 links:
+  - link_name: Blog
+    link: https://jiyeonseo.github.io
   - link_name: Twitter
     link: https://twitter.com/seojeee
   - link_name: Github
