--- a/data/config.yaml
+++ b/data/config.yaml
@@ -11,13 +11,13 @@ enableFooter: true
 enableContextualBacklinks: true
 enableRecentNotes: true
 enableGitHubEdit: true
-GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
+GitHubLink: https://github.com/jiyeonseo/digital-garden/tree/hugo/content
 search:
   enableSemanticSearch: false
   operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
   operandIndexId: "REPLACE-WITH-YOUR-OPERAND-INDEX-ID"
 description:
-  기록을 해봅시다.
+  치즈 나무 지식 걸렸네 🧀🌲
 page_title:
   "🪴 Daily gardening"
 links:
